--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@ body {
 </style>
 <canvas id="canv" style="width: 100%;height:100%"></canvas>
 <script src="lodash.js"></script>
+<script src="config.js"></script>
 <script src="spawner.js"></script>
 <script src="base_shape.js"></script>
+<script src="lives.js"></script>
 <script src="main.js"></script>
+<script src="bindings.js"></script>
