--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@ body {
   background: #212121;
 }
 </style>
+<meta name="viewport" content="initial-scale=1.0, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
 <canvas id="canv" style="width: 100%;height:100%"></canvas>
 <script src="lodash.js"></script>
 <script src="config.js"></script>
