--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@ body {
 <canvas id="canv" style="width: 100%;height:100%"></canvas>
 <script src="lodash.js"></script>
 <script src="config.js"></script>
-<script src="spawner.js"></script>
 <script src="base_shape.js"></script>
+<script src="drain.js"></script>
+<script src="spawner.js"></script>
+<script src="shapes.js"></script>
+<script src="levels.js"></script>
 <script src="lives.js"></script>
 <script src="main.js"></script>
 <script src="bindings.js"></script>
