--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,39 @@
-<style>
-body {
-  margin: 0;
-  background: #212121;
-}
-</style>
-<meta name="viewport" content="initial-scale=1.0, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
-<canvas id="canv" style="width: 100%;height:100%"></canvas>
-<script src="lodash.js"></script>
-<script src="config.js"></script>
-<script src="base_shape.js"></script>
-<script src="drain.js"></script>
-<script src="spawner.js"></script>
-<script src="shapes.js"></script>
-<script src="levels.js"></script>
-<script src="lives.js"></script>
-<script src="main.js"></script>
-<script src="bindings.js"></script>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title>Blue Square</title>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+    
+  </head>
+  <body>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-30570115-16', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <style>
+    body {
+      margin: 0;
+      background: #212121;
+    }
+    </style>
+    <canvas id="canv" style="width: 100%;height:100%"></canvas>
+    <script src="lodash.js"></script>
+    <script src="config.js"></script>
+    <script src="base_shape.js"></script>
+    <script src="drain.js"></script>
+    <script src="spawner.js"></script>
+    <script src="shapes.js"></script>
+    <script src="levels.js"></script>
+    <script src="lives.js"></script>
+    <script src="main.js"></script>
+    <script src="bindings.js"></script>
+  </body>
+</html>
